# smart_discord

./: .env.example  .gitignore  =0.4.0  README.md  STARTUP.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yml
.windsurf/workflows/: shutdown.md  startup.md
apps/api/: Dockerfile  pyproject.toml
apps/api/src/: __init__.py  main.py
apps/api/src/agents/: __init__.py  analytics.py  dm_memory.py  general_knowledge.py  graphrag.py  hybrid_query.py  router.py  sql_validator.py  vector_rag.py  web_search.py
apps/api/src/core/: config.py  llm_factory.py  pre_prompt.py
apps/api/src/services/: __init__.py  conversation_memory.py  document_processor.py  enrichment_service.py  hybrid_embedding.py  qdrant_service.py  security_service.py  semantic_chunker.py  storage_service.py  thematic_analyzer.py
apps/bot/: Dockerfile  pyproject.toml
apps/bot/src/: __init__.py  bot.py  celery_config.py  config.py  hybrid_sessionizer.py  leaky_bucket.py  rate_limiter.py  sessionizer.py  tasks.py
apps/web/: .env.example  Dockerfile  next.config.js  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/src/app/: actions.ts  globals.css  layout.tsx  page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/dashboard/[guildId]/: page.tsx
apps/web/src/app/dashboard/api-keys/: page.tsx
apps/web/src/app/dashboard/settings/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/components/: ChannelToggle.tsx  PrePromptEditor.tsx  activity-chart.tsx  channel-list.tsx  indexing-progress.tsx  stats-card.tsx
apps/web/src/lib/: api.ts  auth.ts  permissions.ts
apps/web/src/types/: discord.ts  stats.ts
data/: settings.json
reports/: CHECKLIST.md  Discord RAG Bot and Web App.md  REPORT.md  REPORT1.md  REPORT10.md  REPORT11.md  REPORT12.md  REPORT2.md  REPORT3.md  REPORT4.md  REPORT5.md  REPORT6.md  REPORT7.md  REPORT8.md  REPORT9.md  REPORT_SUMMARY.md
scripts/: backfill_messages.py  build_topics.py  index_to_qdrant.py  verify_sync.py
tests/: repro_routing.py  test_celery.py  test_document_ingestion.py  test_message_events.py  test_rate_limiter.py  test_right_to_be_forgotten.py  test_security.py  test_semantic_chunking.py  test_sessionizer.py  test_sql_validator.py
tools/qdrant/storage/: raft_state.json
tools/qdrant/storage/collections/discord_sessions/: config.json  payload_index.json
tools/qdrant/storage/collections/discord_sessions/0/: newest_clocks.json  replica_state.json
(+399 files in other folders)
