[project]
name = "smart-discord"
version = "0.1.0"
description = "AI-powered Discord community intelligence bot"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py312"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "S101",  # assert usage
    "S104",  # binding to all interfaces
    "S108",  # hardcoded temp file
    "S311",  # random not for crypto
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]  # Allow asserts in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
